# hose-stock-lakehouse

./: .gitignore  LICENSE  README.md  data_quality.md  docker-compose.yml  flow_batch.md  indicators_backup_clean.json  pyproject.toml  pyrightconfig.json  requirements.txt
airflow/: Dockerfile  requirements.txt
airflow/dags/: dag_corporate_events.py  dag_daily_index.py  dag_daily_ohlcv.py  dag_dim_date.py  dag_symbol_metadata.py  minio_exporter_dag.py
dags/: dag_daily_index.py  dag_daily_ohlcv.py  dag_dim_date.py  dag_symbol_metadata.py
notebook/: 01_api_feasibility_check_batch.ipynb  01_smoke_test_minio.ipynb  02_smoke_test_iceberg.ipynb  03_smoke_test_clickhouse.ipynb  04_read_clickhouse_tables.ipynb
scripts/: register_tasks.ps1  start_streaming.ps1  stop_streaming.ps1  test_fpt_critical.py
src/dnse_sdk/: __init__.py
src/dnse_sdk/trading_websocket/: pyproject.toml
src/stock_lakehouse/: __init__.py  config.py
src/stock_lakehouse/bronze/: __init__.py  corporate_events.py  ohlcv.py  symbols.py
src/stock_lakehouse/clickhouse/: __init__.py  client.py  loader.py
src/stock_lakehouse/gold/: __init__.py  dim_date.py  dim_symbol.py  fact_corporate_events.py  fact_daily_market.py  fact_index_daily.py  (+1 more)
streamlit_app/: Dockerfile  app.py  common.py  market_tab.py  realtime_tab.py  requirements.txt  stock_tab.py
tests/: conftest.py  test_alert_detector_mock.py  test_corporate_events_pipeline.py  test_gold_pipeline.py  test_iceberg_writer.py  test_index_pipeline.py  test_ohlcv_pipeline.py  test_quality_checks.py  test_slack_integration.py  test_staging_writer.py
(+66 files in other folders)
