[project]
name = "stock-lakehouse"
version = "0.1.0"
description = "Real-time stock data lakehouse with ClickHouse + Iceberg + Kafka (Vietnamese market)."
requires-python = ">=3.13"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
markers = [
    "integration: requires Docker Compose services (MinIO, Iceberg REST, etc.)",
]
filterwarnings = [
    "ignore::DeprecationWarning:importlib",
    "ignore::DeprecationWarning:_bootstrap",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["src", "streamlit_app"]

[tool.pyrefly]
search_path = ["src", "streamlit_app"]
