[project]
name = "trading-websocket"
version = "1.0.1"
description = "DNSE WebSocket Market Data SDK"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "msgpack>=1.0",
    "certifi>=2024.0",
]

[tool.setuptools]
packages = ["trading_websocket"]
package-dir = {"trading_websocket" = "."}